# containers

./: README.md  next_tag.sh
base/: Dockerfile  Dockerfile.base  Dockerfile.builder  Dockerfile.lang  Jenkinsfile  base-build.sh  build.sh  builder-build.sh  builder-dev.app
builder/: .gitignore  .zshrc  Dockerfile  build.sh  builder-build.sh  builder.nomad.tpl  docker-build.sh  docker-deploy.sh  docker-exec.sh  docker-run.sh  entrypoint.sh  go.sh  node_install.sh
codeserver/: .exports  .gitconfig  .gitconfig.tpl  .gitignore  .zshrc  Dockerfile  build.sh  codeserver-dev.app  config.yml  config.yml.tpl  create_student.sh  create_user.sh  delete-user.sh  delete_student.sh  delete_user.sh  docker-build.sh  entrypoint.sh  git_clone.sh  github_checkout_all.sh  go.sh  new_user.sh  repositories.txt  runtime_install.sh  vscode.app.tpl
codeserver-base/: Dockerfile  Jenkinsfile  build.sh
codeserver_simple/: docker-build.sh  entrypoint.sh  settings.json
docker-hub/: Dockerfile  build.sh  docker-hub-backend.app  docker-hub-build.sh  docker-hub-dev.app
elasticsearch/: Dockerfile  build.sh  docker-compose.yml  elasticsearch-backend.app  elasticsearch-dev.app  elasticsearch.yml
kibana/: build.sh  kibana-backend.app  kibana-dev.app  kibana.yml
languages/: Dockerfile  Jenkinsfile  build.sh  lang-build.sh  languages-build.sh
nginx/: Dockerfile  build.sh  entrypoint.sh  nginx-build.sh  nginx-dev.app  nginx-public.app
serbot/: Dockerfile  Jenkinsfile  app.py  build.sh  entrypoint.sh  pyproject.toml  serbot-backend.app
tools/: Dockerfile  Jenkinsfile  build.sh
(+3 files in other folders)
